[gd_scene load_steps=12 format=3 uid="uid://dm5p7g3m8en0t"]

[ext_resource type="Script" uid="uid://i2awk86mfs0u" path="res://Scripts/Enemy/enemy.gd" id="1_ofthe"]
[ext_resource type="Script" uid="uid://dlyuwr6hvswq1" path="res://Scripts/Components/General Components/animation_component.gd" id="2_67xvd"]
[ext_resource type="Texture2D" uid="uid://dwfg71y7dv26a" path="res://Textures/Placeholder Sprites/HoloSprites/Shrimp-Sheet.png" id="3_67xvd"]
[ext_resource type="PackedScene" uid="uid://dvnbf8jvk1qwj" path="res://Scenes/Component Scenes/Enemy Components/enemy_hitbox_component.tscn" id="3_rmt0q"]
[ext_resource type="PackedScene" uid="uid://bgqg2fu3y66ej" path="res://Scenes/Component Scenes/General Components/health_component.tscn" id="4_lij3b"]
[ext_resource type="Script" uid="uid://dw6b11qrvupr5" path="res://Scripts/Enemy/enemy_sprite.gd" id="4_rmt0q"]

[sub_resource type="Animation" id="Animation_ku28h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hcq3k"]
resource_name = "run"
length = 0.60000336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wtws"]
_data = {
&"RESET": SubResource("Animation_ku28h"),
&"run": SubResource("Animation_hcq3k")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_udfau"]
radius = 9.0
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmt0q"]

[node name="enemy" type="CharacterBody2D"]
collision_layer = 6
collision_mask = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ofthe")

[node name="AnimationComponent" type="Node2D" parent="."]
script = ExtResource("2_67xvd")

[node name="EnemySprite" type="Sprite2D" parent="AnimationComponent"]
texture = ExtResource("3_67xvd")
hframes = 3
script = ExtResource("4_rmt0q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationComponent/EnemySprite"]
libraries = {
&"": SubResource("AnimationLibrary_4wtws")
}

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_udfau")
debug_color = Color(1, 1, 1, 0.41960785)

[node name="EnemyHitboxComponent" parent="." node_paths=PackedStringArray("health_component", "animation_component") instance=ExtResource("3_rmt0q")]
health_component = NodePath("../HealthComponent")
animation_component = NodePath("../AnimationComponent")

[node name="Hitbox" type="CollisionShape2D" parent="EnemyHitboxComponent"]
shape = SubResource("RectangleShape2D_rmt0q")
debug_color = Color(0, 0.6, 0.7019608, 0.41960785)

[node name="HealthComponent" parent="." node_paths=PackedStringArray("hitbox_component") instance=ExtResource("4_lij3b")]
hitbox_component = NodePath("../EnemyHitboxComponent")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
